[package]
name = "groovy2kts"
version = "0.1.0"
authors = ["ranaaditya <mail2aditya.rana98@gmail.com>"]
license = "MIT"
description = "Converter for Groovy based Gradle files into Kotlin scripts"
readme = "README.md"
homepage = "https://github.com/ranaaditya/groovy2kts"
repository = "https://github.com/ranaaditya/groovy2kts"
keywords = ["cli", "kotlin", "groovy", "gradle"]
categories = ["command-line-utilities"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
